syntax = "proto3";
package proto;
option go_package = "github.com/example/mini-tiktok/proto;proto";

service UserService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc GetProfile(GetProfileRequest) returns (GetProfileResponse);
  rpc Follow(FollowRequest) returns (FollowResponse);
  rpc Unfollow(FollowRequest) returns (FollowResponse);
}

message RegisterRequest { string email = 1; string password = 2; string nickname = 3; }
message RegisterResponse { string user_id = 1; }
message LoginRequest { string email = 1; string password = 2; }
message LoginResponse { string token = 1; string user_id = 2; }
message GetProfileRequest { string user_id = 1; }
message GetProfileResponse { string user_id = 1; string email = 2; string nickname = 3; string avatar_url = 4; int64 followers = 5; int64 following = 6; }
message FollowRequest { string user_id = 1; string target_id = 2; }
message FollowResponse { bool ok = 1; }
